unpackaged/main/default/objects/Account/fields/dollarydoos__c.field-meta.xml
<CustomField>
    <fullName>dollarydoos__c</fullName>
    <label>dollarydoos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>