unpackaged/main/default/objects/Account/fields/newField__c.field-meta.xml
<CustomField>
    <fullName>newField__c</fullName>
    <externalId>true</externalId>
    <label>newField</label>
    <length>123</length>
    <type>Text</type>
</CustomField>