unpackaged/main/default/objects/Account/recordTypes/testAccount.recordType-meta.xml
<RecordType>
    <fullName>testAccount</fullName>
    <active>true</active>
    <label>testAccount</label>
</RecordType>